fix: enforce text visibility in light theme and hide back button

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -31,7 +31,7 @@ $comp-color 	     : complement(#222);
     --border-color: #f0f0f0;
     --meta-color: #8c8b8b;
     --shadow-color: rgba(40, 40, 40, 0.3);
-    --welcome-text-color: #ffffff;
+    --welcome-text-color: #383838;
     --welcome-border-color: rgba(0, 0, 0, 0.1);
     --btn-text-color: #383838;
     --btn-border-color: #383838;
